plugins {
    id 'com.android.application'
}

android {
    compileSdkVersion 34
    buildToolsVersion "30.0.3"

    defaultConfig {

        applicationId "com.abdolphininfratech"
        minSdkVersion 28
        targetSdkVersion 34
        versionCode 20
        versionName "2.18"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }


    tasks.withType(JavaCompile).configureEach{
        options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }



    buildFeatures{
        viewBinding=true
    }

    buildTypes {

        debug {
            buildConfigField "String", "BASE_URL", "\"https://abdolphininfratech.com/\""
        }
        release {
            buildConfigField "String", "BASE_URL", "\"https://abdolphininfratech.com/\""
            lintOptions {
                disable 'MissingTranslation'
                checkReleaseBuilds false
                abortOnError false
            }
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            debuggable false
            jniDebuggable false
            renderscriptDebuggable false
        }
    }
    compileOptions {
        sourceCompatibility = 1.8
        targetCompatibility = 1.8
    }
}


dependencies {

    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'

    /**
     * Glide
     */
    implementation 'com.github.bumptech.glide:glide:4.16.0'
    //Custom Font
    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
    implementation 'com.google.android.material:material:1.1.0'
    /**
     * Retrofit
     */
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
    implementation 'com.github.smarteist:autoimageslider:1.3.9'

    //butterknife
    implementation 'com.jakewharton:butterknife:10.2.3'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
//
    implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
    implementation 'de.hdodenhof:circleimageview:3.1.0'
   implementation 'com.squareup.picasso:picasso:2.71828'
//    Image Uploading
    implementation 'id.zelory:compressor:3.0.1'
   // implementation 'com.github.jrvansuita:PickImage:2.2.4'

//    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
//    implementation 'com.github.CanHub:Android-Image-Cropper:4.5.0'
    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
    implementation 'com.android.volley:volley:1.2.1'
    //app updater
    implementation 'com.github.javiersantos:AppUpdater:2.7'
    implementation 'com.scottyab:rootbeer-lib:0.1.0'
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.22'
    implementation 'com.github.smarteist:autoimageslider:1.3.9'
    implementation 'com.itextpdf:itextpdf:5.5.13.2'


}